# pipeline-lab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  isa.md  pipeline.md
examples/: array_sum.asm  fib.asm  simple_add.asm  sum_loop.asm
include/plab/asm/: assembler.hpp  lexer.hpp  parser.hpp
include/plab/isa/: encoding.hpp  instruction.hpp  registers.hpp
include/plab/sim/: alu.hpp  interpreter.hpp  memory.hpp  pipeline.hpp  register_file.hpp
include/plab/viz/: trace.hpp
src/: CMakeLists.txt  main.cpp
src/asm/: CMakeLists.txt  assembler.cpp  lexer.cpp  parser.cpp
src/isa/: CMakeLists.txt  encoding.cpp  instruction.cpp
src/sim/: CMakeLists.txt  alu.cpp  interpreter.cpp  pipeline.cpp
src/viz/: CMakeLists.txt  trace.cpp
tests/: CMakeLists.txt  run_cli_test.cmake  test_assembler.cpp  test_encoding.cpp  test_hazards.cpp  test_interpreter.cpp  test_lexer_parser.cpp  test_pipeline_correctness.cpp  test_viz.cpp
